--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "rehype-pretty-code": "^0.10.1",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "3.0.1",
-    "typescript": "^5.2.2"
+    "three": "^0.159.0",
+    "typescript": "^5.2.2",
+    "vanta": "^0.5.24"
   },
   "devDependencies": {
     "@opentelemetry/api": "1.6.0",
