--- a/package.json
+++ b/package.json
@@ -18,18 +18,18 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@heroicons/react": "^2.0.13",
+    "@heroicons/react": "^2.0.18",
     "@react-pdf-viewer/core": "^3.12.0",
-    "@vercel/analytics": "^1.0.0",
+    "@vercel/analytics": "^1.1.1",
     "clsx": "^1.2.1",
-    "next": "^13.1.2",
+    "next": "^13.5.6",
     "next-themes": "^0.2.1",
-    "pdfjs-dist": "^3.4.120",
+    "pdfjs-dist": "^3.11.174",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^4.7.1",
+    "react-icons": "^4.12.0",
     "react-scrollmagic": "^2.3.0",
-    "tailwind-merge": "^1.8.1",
+    "tailwind-merge": "^1.14.0",
     "three": "^0.135.0",
     "vanta": "^0.5.24"
   },
@@ -37,17 +37,18 @@
     "@commitlint/cli": "^16.3.0",
     "@commitlint/config-conventional": "^16.2.4",
     "@svgr/webpack": "^6.5.1",
-    "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/typography": "^0.5.9",
-    "@testing-library/jest-dom": "^5.16.5",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
-    "@types/react": "^18.0.26",
-    "@typescript-eslint/eslint-plugin": "^5.48.1",
-    "@typescript-eslint/parser": "^5.48.1",
-    "autoprefixer": "^10.4.13",
-    "eslint": "^8.31.0",
-    "eslint-config-next": "^13.1.2",
-    "eslint-config-prettier": "^8.6.0",
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^19.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.55.0",
+    "eslint-config-next": "^13.5.6",
+    "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^7.0.4",
@@ -55,11 +56,11 @@
     "lint-staged": "^12.5.0",
     "next-router-mock": "^0.7.5",
     "next-sitemap": "^2.5.28",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.3",
+    "postcss": "^8.4.32",
+    "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.4"
+    "tailwindcss": "^3.3.6",
+    "typescript": "^4.9.5"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
